Fixed the alignment of the text on the side bar

--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -10,10 +10,6 @@
   overflow: hidden;
   font-size: 10px;
   margin: auto;
-}
-
-.sidebar {
-  margin: auto;
   text-align: center;
 }
 
